Fix textarea height in firefox, remove overflow-y leading to two scrollbars

--- a/style.scss
+++ b/style.scss
@@ -157,15 +157,10 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    overflow-y: scroll;
     transition: left 0.3s ease-out;
     & > textarea {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
       width: 100%;
+      height: 100%;
       padding: 2px 10px;
       box-sizing: border-box;
       background: transparent;
